[package]
name = "api"
version = "1.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
bollard = "0.11.1"
log = "0.4.17"
makepress-lib = { version = "3.0.0", registry = "makepress" }
pretty_env_logger = "0.4.0"
serde = "1.0.152"
sled = "0.34.7"
tokio = { version = "1.24.2", features = ["full"] }
warp = "0.3.3"
